<resources>
    <string name="app_name">Animal Picture</string>
    <string name="text_view_comingsoon">Coming soon</string>
    <string name="text_view_opcionMenu">Buscar animal mediante la IA de animal Picture</string>
    <string name="text_view_enviarImagen">Previsualización de la imagen</string>
    <string name="text_view_iniciarSesion">Iniciar sesión</string>
    <string name="text_view_inicio">Inicio</string>
    <string name="text_view_enviarImagen2">Imagen seleccionada:</string>
    <string name="text_view_iniciodato">Se calcula que existen unos 7,77 millones de especies de animales en la Tierra y en los océanos.</string>
    <string name="text_view_mostrardatos1">Nombre</string>
    <string name="text_view_mostrardatos2">Nombre Cientifico: </string>
    <string name="text_view_mostrardatos3">Alimentación: </string>
    <string name="text_view_mostrardatos4">Peso: </string>
    <string name="text_view_mostrardatos5">Altura: </string>
    <string name="text_view_mostrardatos6">Habitat: </string>
    <string name="text_view_mostrardatos7">Especie: </string>
    <string name="text_view_mostrardatos8">Info</string>
    <string name="text_view_registrase">Registrarse</string>
    <string name="text_view_busquedamanual">Búsqueda Manual</string>
    <string name="edit_text_correo">Correo:</string>
    <string name="edit_text_contrasena">Contraseña:</string>
    <string name="edit_text_nombre">Nombre:</string>
    <string name="edit_text_usuario">Usuario:</string>
    <string name="edit_text_nombreanimal">Nombre del animal:</string>
    <string name="imagen_buscarImagenes1">Camara</string>
    <string name="imagen_buscarImagenes2">Galeria</string>
    <string name="buttomtextImagen1">Tomar Fotografía</string>
    <string name="buttomtextImagen2">Elegir de galeria</string>
    <string name="buttom3">Volver</string>
    <string name="buttom4">Enviar</string>
    <string name="buttom5">Volver</string>
    <string name="buttom6">Ingresar</string>
    <string name="buttom7">Registrarse</string>
    <string name="buttom8">Buscar</string>
    <string name="buttomtextBuscar1">Búsqueda manual</string>
    <string name="buttomtextBuscar2">Búsqueda mediante la IA de Animal Picture</string>
    <string name="buttomtextBuscar3">Ingrese el nombre del animal</string>
</resources>